Bug #9538
mon crashes on some --format=plain commands
100%
Description
Mentioned by bens on IRC, creating ticket in case we forget:
19:21 i just found a bung and its easy to repro 19:21 bug 19:22 i can't file a report on it, but thought you guys might have fun. 19:22 ceph --format plain osd find 71 19:22 crashes monitor. 19:24 i'll file one later
"osd find" and "osd metadata" both have the problem, they're dereferencing a null Formatter. It probably isn't worth writing special plan output code for them, we should just force the format to json-pretty when the user passes plain. Should also skim other functions there to see if anyone else is being unsafe with 'f' dereferences.
Associated revisions
mon: osd find / metadata --format plain fallback
ceph --format plain osd find 1 (and metadata) are not implemented and
must fallback to the default (json-pretty).
http://tracker.ceph.com/issues/9538 Fixes: #9538
Signed-off-by: Loic Dachary <loic-201408@dachary.org>
mon: osd find / metadata --format plain fallback
ceph --format plain osd find 1 (and metadata) are not implemented and
must fallback to the default (json-pretty).
http://tracker.ceph.com/issues/9538 Fixes: #9538
Signed-off-by: Loic Dachary <loic-201408@dachary.org>
(cherry picked from commit 13780d755115387591888f94ea6c58ac0db3ecc4)
History
#1 Updated by Loïc Dachary over 6 years ago
- Category set to Monitor
- Status changed from New to 12
- Assignee set to Loïc Dachary
- Priority changed from Normal to High
- Target version set to 0.88
#2 Updated by Loïc Dachary over 6 years ago
- Status changed from 12 to Fix Under Review
- % Done changed from 0 to 80
#3 Updated by Loïc Dachary over 6 years ago
Checked all other uses of new_formatter allocated pointer in OSDMonitor
#4 Updated by Loïc Dachary over 6 years ago
- Status changed from Fix Under Review to Resolved
- % Done changed from 80 to 100
#5 Updated by Loïc Dachary almost 6 years ago
- Status changed from Resolved to Pending Backport
- Target version deleted (
0.88) - Backport set to firefly
- firefly backport https://github.com/ceph/ceph/pull/4475
#6 Updated by Loïc Dachary almost 6 years ago
- Status changed from Pending Backport to Resolved