mon: osd find / metadata --format plain fallback

ceph --format plain osd find 1 (and metadata) are not implemented and
must fallback to the default (json-pretty).

http://tracker.ceph.com/issues/9538 Fixes: #9538

Signed-off-by: Loic Dachary <loic-201408@dachary.org>
(cherry picked from commit 13780d7)

Rebased to omit the modifications to qa/workunits/cephtool/test.sh so the patch
will apply to the upstream tarball.

Signed-off-by: Nathan Cutler <ncutler@suse.com>